cluster/apps/default/lemmy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lemmy
  namespace: default
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: nginx
  selector:
    app: lemmy
