cluster/apps/default/lemmy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lemmy
  namespace: default
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "connection"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns.alpha.kubernetes.io/target: "${SECRET_CLOUDFLARE_TUNNEL_DOMAIN}"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-ips-only@kubernetescrd,networking-cloudflarewarp@kubernetescrd"
spec:
  ingressClassName: traefik
  tls:
    - secretName: "${SECRET_LAB_DOMAIN/./-}-tls"
      hosts:
        - lemmy.${SECRET_LAB_DOMAIN}
  rules:
    - host: lemmy.${SECRET_LAB_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lemmy
                port:
                  name: lemmy-ui
          - path: "/(api|pictrs|feeds|nodeinfo|.well-known)"
            pathType: Prefix
            backend:
              service:
                name: lemmy
                port:
                  name: lemmy
